<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".Fr_home" android:id="@+id/fl_home">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/bienvenido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:textStyle="bold"
                android:textAlignment="center" android:textSize="24sp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/alumno1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView7" android:layout_weight="1"
                    android:textSize="18sp" android:textAlignment="center"/>
            <TextView
                    android:text="@string/alumno2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView8" android:layout_weight="1"
                    android:textSize="18sp" android:textAlignment="center"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/LL_Foto">
        </LinearLayout>
    </LinearLayout>
</FrameLayout>