<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".Fr_favorito">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/favoritos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp" android:textAlignment="center"
                    android:textSize="24sp" android:textColor="@color/icon_tint_normal" android:textStyle="bold"
            />
        </LinearLayout>
        <ImageView
                android:src="@drawable/c_favorito"
                android:layout_width="match_parent"
                android:layout_height="276dp" android:id="@+id/imgFavorito2"
                android:contentDescription="@string/Img"/>
        <TextView
                android:text="@string/noHay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/lblFavorito2" android:textAlignment="center"
                android:textSize="24sp" android:textStyle="bold"/>
        <android.support.v7.widget.RecyclerView
                android:layout_width="370dp"
                android:layout_height="450dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
                android:id="@+id/rv_favorito"
        />
    </LinearLayout>

</FrameLayout>